--- a/index.html
+++ b/index.html
@@ -562,8 +562,12 @@ basic APIs, improving reliability and performance
                         </div>
                         <div class="flex space-x-3">
                            
+                           
                             <a href="https://github.com/Fathima6624/ecommerce"  target="_blank"  class="text-primary hover:text-secondary">
                                 <i class="fab fa-github"></i> Code
+                            </a>
+                             <a href="https://ecommerce-covc.onrender.com" target="_blank" class="text-primary hover:text-secondary">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
                     </div>
