--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ basic APIs, improving reliability and performance
                         </div>
                         <div class="flex space-x-3">
                            
-                            <a href="https://github.com/Fathima6624/calculator" class="text-primary hover:text-secondary">
+                            <a href="https://github.com/Fathima6624/online_examination" target="_blank" class="text-primary hover:text-secondary">
                                 <i class="fab fa-github"></i> Code
                             </a>
 
